@@ -1,6 +1,10 @@
 package com.memblogart.controller;
 
 import java.io.*;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.PreparedStatement;
+import java.sql.ResultSet;
 import java.sql.Timestamp;
 import java.util.*;
 
@@ -9,9 +13,11 @@ import javax.servlet.annotation.MultipartConfig;
 import javax.servlet.annotation.WebServlet;
 import javax.servlet.http.*;
 
+import com.memartpic.model.MemArtPicService;
 import com.memartpic.model.MemArtPicVO;
 import com.memblogart.model.*;
-
+import com.memreply.model.MemReplyService;
+import com.memreply.model.MemReplyVO;
 
 @WebServlet("/MemBlogArtServlet")
 @MultipartConfig(fileSizeThreshold = 1024 * 1024, maxFileSize = 5 * 1024 * 1024, maxRequestSize = 5 * 5 * 1024 * 1024)
@@ -29,74 +35,65 @@ public class MemBlogArtServlet extends HttpServlet {
 		req.setCharacterEncoding("UTF-8");
 		String action = req.getParameter("action");
 
-		if ("upload".equals(action)) {}
+//		if ("upload".equals(action)) {}
 
-//		
-//		if ("getOne_For_Display".equals(action)) { // 來自select_page.jsp的請求
-//
-//			List<String> errorMsgs = new LinkedList<String>();
-//			// Store this set in the request scope, in case we need to
-//			// send the ErrorPage view.
-//			req.setAttribute("errorMsgs", errorMsgs);
-//
-//			try {
-//				/***************************1.接收請求參數 - 輸入格式的錯誤處理**********************/
-//				String str = req.getParameter("empno");
-//				if (str == null || (str.trim()).length() == 0) {
-//					errorMsgs.add("請輸入員工編號");
-//				}
-//				// Send the use back to the form, if there were errors
-//				if (!errorMsgs.isEmpty()) {
-//					RequestDispatcher failureView = req
-//							.getRequestDispatcher("/emp/select_page.jsp");
-//					failureView.forward(req, res);
-//					return;//程式中斷
-//				}
-//				
-//				Integer empno = null;
-//				try {
-//					empno = new Integer(str);
-//				} catch (Exception e) {
-//					errorMsgs.add("員工編號格式不正確");
-//				}
-//				// Send the use back to the form, if there were errors
-//				if (!errorMsgs.isEmpty()) {
-//					RequestDispatcher failureView = req
-//							.getRequestDispatcher("/emp/select_page.jsp");
-//					failureView.forward(req, res);
-//					return;//程式中斷
-//				}
-//				
-//				/***************************2.開始查詢資料*****************************************/
-//				EmpService empSvc = new EmpService();
-//				EmpVO empVO = empSvc.getOneEmp(empno);
-//				if (empVO == null) {
-//					errorMsgs.add("查無資料");
-//				}
-//				// Send the use back to the form, if there were errors
-//				if (!errorMsgs.isEmpty()) {
-//					RequestDispatcher failureView = req
-//							.getRequestDispatcher("/emp/select_page.jsp");
-//					failureView.forward(req, res);
-//					return;//程式中斷
-//				}
-//				
-//				/***************************3.查詢完成,準備轉交(Send the Success view)*************/
-//				req.setAttribute("empVO", empVO); // 資料庫取出的empVO物件,存入req
-//				String url = "/emp/listOneEmp.jsp";
-//				RequestDispatcher successView = req.getRequestDispatcher(url); // 成功轉交 listOneEmp.jsp
-//				successView.forward(req, res);
-//
-//				/***************************其他可能的錯誤處理*************************************/
-//			} catch (Exception e) {
-//				errorMsgs.add("無法取得資料:" + e.getMessage());
-//				RequestDispatcher failureView = req
-//						.getRequestDispatcher("/emp/select_page.jsp");
-//				failureView.forward(req, res);
-//			}
-//		}
-//		
-//		
+		
+		if ("getOne_For_Display".equals(action)) { // 來自blog_category-big2.jsp的請求
+
+			List<String> errorMsgs = new LinkedList<String>();
+			// Store this set in the request scope, in case we need to
+			// send the ErrorPage view.
+			req.setAttribute("errorMsgs", errorMsgs);
+			
+			try {
+				/***************************1.接收請求參數 - 輸入格式的錯誤處理**********************/
+				
+				Integer artid = Integer.parseInt(req.getParameter("artid"));
+	
+				Integer reArtId = artid;
+				
+				
+				/***************************2.開始查詢資料*****************************************/
+				MemBlogArtService mbaSvc = new MemBlogArtService();
+				MemBlogArtVO memBlogArtVO = mbaSvc.findByPrimaryKey(artid);
+				
+				MemReplyService mrSvc = new MemReplyService();
+				List<MemReplyVO> memReplyVO = mrSvc.getAllByArtId(reArtId);
+				
+				System.out.println(memReplyVO);	
+				
+				
+				if (memBlogArtVO == null) {
+					errorMsgs.add("查無資料");
+				}
+				
+				if (memReplyVO == null) {
+					errorMsgs.add("查無資料");
+				}
+				// Send the use back to the form, if there were errors
+				if (!errorMsgs.isEmpty()) {
+					RequestDispatcher failureView = req
+							.getRequestDispatcher("/nest-frontend/blog_category-big2.jsp");
+					failureView.forward(req, res);
+					return;//程式中斷
+				}
+				
+				/***************************3.查詢完成,準備轉交(Send the Success view)*************/
+				req.setAttribute("memBlogArtVO", memBlogArtVO); // 資料庫取出的empVO物件,存入req
+				String url = "/nest-frontend/blog-post-fullwidth2.jsp";
+				RequestDispatcher successView = req.getRequestDispatcher(url); // 成功轉交 blog-post-fullwidth2.jsp
+				successView.forward(req, res);
+
+				/***************************其他可能的錯誤處理*************************************/
+			} catch (Exception e) {
+				errorMsgs.add("無法取得資料:" + e.getMessage());
+				RequestDispatcher failureView = req
+						.getRequestDispatcher("/nest-frontend/blog_category-big2.jsp");
+				failureView.forward(req, res);
+			}
+		}
+		
+		
 
 		if ("edit".equals(action)) { // 來自blog_manage.jsp的請求
 
@@ -117,14 +114,14 @@ public class MemBlogArtServlet extends HttpServlet {
 
 				/*************************** 3.查詢完成,準備轉交(Send the Success view) ************/
 				req.setAttribute("memBlogArtVO", memBlogArtVO); // 資料庫取出的empVO物件,存入req
-				String url = "/views/blog_edit-article.jsp";
+				String url = "/nest-backend/blog_edit-article.jsp";
 				RequestDispatcher successView = req.getRequestDispatcher(url);// 成功轉交 update_emp_input.jsp
 				successView.forward(req, res);
 
 				/*************************** 其他可能的錯誤處理 **********************************/
 			} catch (Exception e) {
 				errorMsgs.add("無法取得要修改的資料:" + e.getMessage());
-				RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_manage.jsp");
+				RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_manage.jsp");
 				failureView.forward(req, res);
 			}
 		}
@@ -170,7 +167,7 @@ public class MemBlogArtServlet extends HttpServlet {
 
 				if (!errorMsgs.isEmpty()) {
 					req.setAttribute("memBlogArtVO", memBlogArtVO); // 含有輸入格式錯誤的memBlogArtVO物件,也存入req
-					RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_edit-article.jsp");
+					RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_edit-article.jsp");
 					failureView.forward(req, res);
 					return; // 程式中斷
 				}
@@ -182,14 +179,14 @@ public class MemBlogArtServlet extends HttpServlet {
 
 //				/***************************3.修改完成,準備轉交(Send the Success view)*************/
 				req.setAttribute("memBlogArtVO", memBlogArtVO); // 資料庫update成功後,正確的的empVO物件,存入req
-				String url = "/views/blog_manage.jsp";
+				String url = "/nest-backend/blog_manage.jsp";
 				RequestDispatcher successView = req.getRequestDispatcher(url); // 修改成功後,轉交listOneEmp.jsp
 				successView.forward(req, res);
 
 //				/***************************其他可能的錯誤處理*************************************/
 			} catch (Exception e) {
 				errorMsgs.add("修改資料失敗:" + e.getMessage());
-				RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_edit-article.jsp");
+				RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_edit-article.jsp");
 				failureView.forward(req, res);
 				e.printStackTrace();
 			}
@@ -216,7 +213,7 @@ public class MemBlogArtServlet extends HttpServlet {
 				String content = req.getParameter("content");
 				if (content == null || content.trim().length() == 0) {
 					errorMsgs.add("文章內容: 請勿空白");
-				} else if (content.trim().length() >= 1000) {
+				} else if (content.trim().length() >= 2000) {
 					errorMsgs.add("文章內容: 請勿輸入超過1000個字元");
 				}
 
@@ -226,55 +223,6 @@ public class MemBlogArtServlet extends HttpServlet {
 				Integer memberId = 1;
 				
 				
-				//以下是上傳圖片
-				
-				System.out.println("上傳!");
-				req.setCharacterEncoding("Big5"); // 處理中文檔名
-				res.setContentType("text/html; charset=Big5");
-				PrintWriter out = res.getWriter();
-				System.out.println("ContentType=" + req.getContentType()); // 測試用
-
-				String realPath = getServletContext().getRealPath(saveDirectory);
-				System.out.println("realPath=" + realPath); // 測試用
-				File fsaveDirectory = new File(realPath);
-				if (!fsaveDirectory.exists())
-					fsaveDirectory.mkdirs(); // 於 ContextPath 之下,自動建立目地目錄
-
-				Collection<Part> parts = req.getParts(); // Servlet3.0新增了Part介面，讓我們方便的進行檔案上傳處理
-				out.write("<h2> Total parts : " + parts.size() + "</h2>");
-
-				for (Part part : parts) {
-					String filename = getFileNameFromPart(part);
-					if (filename != null && part.getContentType() != null) {
-						out.println("<PRE>");
-						String name = part.getName();
-						String ContentType = part.getContentType();
-						long size = part.getSize();
-						File f = new File(fsaveDirectory, filename);
-
-						out.println("name: " + name);
-						out.println("filename: " + filename);
-						out.println("ContentType: " + ContentType);
-						out.println("size: " + size);
-						out.println("File: " + f);
-
-						// 利用File物件,寫入目地目錄,上傳成功
-						part.write(f.toString());
-
-						// 額外測試 InputStream 與 byte[] (幫將來model的VO預作準備)
-						InputStream in = part.getInputStream();
-						byte[] blArtPic = new byte[in.available()];
-						in.read(blArtPic);
-						in.close();
-						out.println("buffer length: " + blArtPic.length);
-
-						// 額外測試秀圖
-						out.println("<br><img src=\"" + req.getContextPath() + saveDirectory + "/" + filename + "\">");
-
-						out.println();
-						out.println("</PRE>");
-					}
-				}
 						
 			
 				MemBlogArtVO memBlogArtVO = new MemBlogArtVO();
@@ -284,22 +232,13 @@ public class MemBlogArtServlet extends HttpServlet {
 				memBlogArtVO.setMemberId(memberId);
 
 				
-				//
-				
-				Timestamp time = new Timestamp(System.currentTimeMillis());
-				
-//				
-				MemArtPicVO memArtPicVO = new MemArtPicVO();
-//				memArtPicVO.setBlArtId(artid);
-//				memArtPicVO.setBlArtPic(blArtPic);
-				memArtPicVO.setTime(time);
-//				
+				Timestamp time = new Timestamp(System.currentTimeMillis());			
 				
 
 				// Send the use back to the form, if there were errors
 				if (!errorMsgs.isEmpty()) {
 					req.setAttribute("memBlogArtVO", memBlogArtVO); // 含有輸入格式錯誤的empVO物件,也存入req
-					RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_add-article.jsp");
+					RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_add-article.jsp");
 					failureView.forward(req, res);
 					return;
 				}
@@ -309,20 +248,118 @@ public class MemBlogArtServlet extends HttpServlet {
 				memBlogArtVO = mbaSvc.addBlog(memberId, title, posttime, content);
 				
 				
-				
-				
-				
-				
+				/*************************** 3.新增完圖片取得剛剛的產生的PK ***************************************/
+				Connection con = null;
+				PreparedStatement pstmt = null;
+				Integer artid=0;
+				try {
 
-				/*************************** 3.新增完成,準備轉交(Send the Success view) ***********/
-				String url = "/views/blog_add-article.jsp";
-				RequestDispatcher successView = req.getRequestDispatcher(url); // 新增成功後轉交listAllEmp.jsp
-				successView.forward(req, res);
+					con = DriverManager.getConnection("jdbc:mysql://localhost:3306/pet_g3db_tfa105?serverTimezone=Asia/Taipei", "root", "5525");
+					pstmt = con.prepareStatement("select ART_ID from MEM_BLOG_ART order by ART_ID desc limit 0 , 1 ");
+					ResultSet rs= pstmt.executeQuery();
+	
+					while (rs.next()) {
+						artid = rs.getInt(1);
+					}
+					System.out.println(artid + "安安");
+					// Handle any driver errors
+				} catch (Exception e) {
+					throw new RuntimeException("Couldn't load database driver. "
+							+ e.getMessage());
+					// Handle any SQL errors
+				} finally {
+					
+//					pstmt.close();
+					con.close();
+				}
+				
+				
+				Timestamp timepic = new Timestamp(System.currentTimeMillis());		
+								
+				byte[] blArtPic = null;
+				
+				//以下是上傳圖片
 
-				/*************************** 其他可能的錯誤處理 **********************************/
+				req.setCharacterEncoding("Big5"); // 處理中文檔名
+				res.setContentType("text/html; charset=Big5");
+//				PrintWriter out = res.getWriter();
+//				System.out.println("ContentType=" + req.getContentType()); // 測試用
+
+//				String realPath = getServletContext().getRealPath(saveDirectory);
+//				System.out.println("realPath=" + realPath); // 測試用
+//				File fsaveDirectory = new File(realPath);
+//				if (!fsaveDirectory.exists())
+//					fsaveDirectory.mkdirs(); // 於 ContextPath 之下,自動建立目地目錄
+
+
+//				Collection<Part> parts = req.getParts(); // Servlet3.0新增了Part介面，讓我們方便的進行檔案上傳處理
+				Part part =  req.getPart("file");
+				System.out.println(part);
+
+//				for (Part part : parts) {
+//					String filename = getFileNameFromPart(part);
+//					System.out.println(filename+"sssssssssssss");
+//					if (filename != null && part.getContentType() != null) {
+//						
+//						String name = part.getName();
+//						String ContentType = part.getContentType();
+//						long size = part.getSize();
+
+						// 額外測試 InputStream 與 byte[] (幫將來model的VO預作準備)
+						
+//						InputStream in = part.getInputStream();
+//						blArtPic = new byte[in.available()];
+//						in.read(blArtPic);
+//						in.close();
+		
+
+						// 額外測試秀圖
+//						out.println("<br><img src=\"" + req.getContextPath() + saveDirectory + "/" + filename + "\">");
+//
+//						out.println();
+//						out.println("</PRE>");
+//					}
+//				}
+				
+				String filename = getFileNameFromPart(part);
+				System.out.println(filename+"sssssssssssss");
+				if (filename != null && part.getContentType() != null) {
+					
+					String name = part.getName();
+					String ContentType = part.getContentType();
+					long size = part.getSize();
+
+//					 額外測試 InputStream 與 byte[] (幫將來model的VO預作準備)
+					
+					InputStream in = part.getInputStream();
+					blArtPic = new byte[in.available()];
+					in.read(blArtPic);
+					in.close();
+				}
+				
+				MemArtPicVO memArtPicVO = new MemArtPicVO();
+				memArtPicVO.setBlArtId(artid);
+				memArtPicVO.setBlArtPic(blArtPic);
+				memArtPicVO.setTime(timepic);
+					
+//				
+				
+				MemArtPicService mapSvc = new MemArtPicService();
+				memArtPicVO = mapSvc.addArtPic(artid, blArtPic, timepic);
+			
+//				
+//
+//				/*************************** 3.新增完成,準備轉交(Send the Success view) ***********/
+				String url = "nest-backend/blog_manage.jsp";
+//				RequestDispatcher successView = req.getRequestDispatcher(url); // 新增成功後轉交listAllEmp.jsp
+//				successView.forward(req, res);
+				res.sendRedirect(url);
+				
+//
+//				/*************************** 其他可能的錯誤處理 **********************************/
 			} catch (Exception e) {
 				errorMsgs.add(e.getMessage());
-				RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_add-article.jsp");
+				RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_add-article.jsp");
 				failureView.forward(req, res);
 			}
 		}
@@ -341,21 +378,22 @@ public class MemBlogArtServlet extends HttpServlet {
 
 			try {
 				/*************************** 1.接收請求參數 ***************************************/
-				Integer artid = new Integer(req.getParameter("artid"));
+				Integer artid = Integer.valueOf(req.getParameter("artid"));
 
 				/*************************** 2.開始刪除資料 ***************************************/
 				MemBlogArtService mbaSvc = new MemBlogArtService();
 				mbaSvc.delete(artid);
 
 				/*************************** 3.刪除完成,準備轉交(Send the Success view) ***********/
-				String url = "/views/blog_manage.jsp";
-				RequestDispatcher successView = req.getRequestDispatcher(url);// 刪除成功後,轉交回送出刪除的來源網頁
-				successView.forward(req, res);
+				String url = "nest-backend/blog_manage.jsp";
+//				RequestDispatcher successView = req.getRequestDispatcher(url);// 刪除成功後,轉交回送出刪除的來源網頁
+//				successView.forward(req, res);
+				res.sendRedirect(url);
 
 				/*************************** 其他可能的錯誤處理 **********************************/
 			} catch (Exception e) {
 				errorMsgs.add("刪除資料失敗:" + e.getMessage());
-				RequestDispatcher failureView = req.getRequestDispatcher("/views/blog_manage.jsp");
+				RequestDispatcher failureView = req.getRequestDispatcher("/nest-backend/blog_manage.jsp");
 				failureView.forward(req, res);
 			}
 		}
@@ -376,8 +414,7 @@ public class MemBlogArtServlet extends HttpServlet {
 		return filename;
 
 	}
-	
-	
+
 	public static byte[] getPictureByteArray(String path) throws IOException {
 		FileInputStream fis = new FileInputStream(path);
 		byte[] buffer = new byte[fis.available()];
@@ -385,9 +422,5 @@ public class MemBlogArtServlet extends HttpServlet {
 		fis.close();
 		return buffer;
 	}
-	
-	
-	
-	
-	
+
 }
